--- a/PRY_SITIO_DINAMICO/index.html
+++ b/PRY_SITIO_DINAMICO/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Coffe Anteiku</title>
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico" />
     <!-- Google fonts-->
     <link
@@ -14,7 +14,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" href="./public/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./public/vendor/bootstrap-5/css/bootstrap.min.css">
     <link href="./public/css/styles.css" rel="stylesheet" />
 </head>
 
@@ -28,7 +28,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
         <div class="container">
-            <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
+            <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Coffe Anteiku</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -55,7 +55,7 @@
                     <p class="mb-3">Cada taza de nuestro café artesanal de calidad comienza con ingredientes
                         seleccionados a mano y obtenidos de productores locales. Una vez que lo pruebes, se convertirá
                         en un delicioso complemento de tu rutina matutina diaria.</p>
-                    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="/store.html">¡Visítanos Hoy!</a>
+                    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="store.html">¡Visítanos Hoy!</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="./public/js/scripts.js"></script>
 </body>
 
 </html>
