--- a/PRY_SITIO_DINAMICO/store.html
+++ b/PRY_SITIO_DINAMICO/store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Coffe Anteiku</title>
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico" />
     <!-- Google fonts-->
     <link
@@ -14,6 +14,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="./public/vendor/bootstrap-5/css/bootstrap.min.css">
     <link href="./public/css/styles.css" rel="stylesheet" />
 </head>
 
@@ -27,7 +28,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
         <div class="container">
-            <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
+            <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Coffe Anteiku</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -128,7 +129,7 @@
                                 Ven a compartir un momento especial, probar nuestros granos seleccionados y dejarte
                                 envolver por el sabor del verdadero café artesanal.
                             </p>
-                            <a href="/products.html" class="btn mt-3 px-4"
+                            <a href="products.html" class="btn mt-3 px-4"
                                 style="background-color: #a7744c; color: white; border-radius: 20px;">
                                 Descubre Nuestro Menú
                             </a>
@@ -157,7 +158,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <form class="row g-3 needs-validation" novalidate>
+                    <form class="row g-3 needs-validation">
 
                         <!-- Nombre: solo letras, máx 50 -->
                         <div class="col-md-6">
@@ -219,7 +220,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="./public/js/scripts.js"></script>
 </body>
 
 </html>
